# test-console

./: CMakeLists.txt  README.md  build-all.bat
build-mingw.x64/: .gitignore  build-me.bat  cmake-clean.txt
build.vc10/: .gitignore  build-me.bat
build.x64/: .gitignore  build-me.bat
src/: sprtf.cxx  test-con1.c  test-con2.c  test-locale.cxx  tillett.cxx
src/Win32/: test-con3.cpp  test-con3.h  test-con3.rc
